modification in home page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </td>
         </tr>
         </table>
+  <center>
           <hr>
           <p>
               <h3>Books and Reading</h3>
@@ -68,8 +69,9 @@
                 </tbody>
             
               </table>
+              <hr>
           <p>
-          <hr>
+          <h3>Skills</h3>
           <table cellspacing="20">
             <tr>
               <td>
@@ -110,5 +112,6 @@
         </p>
             <a href="hobies.html">Hobies</a>
             <a href="Contact.html">Contact us</a>
+  </center>
   </body>
 </html>
