contact page modify

--- a/Contact.html
+++ b/Contact.html
@@ -7,23 +7,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Contact us</h1>
-    <p>CEO : Arthur kindo</p>
-    <p>Phone no : 69995005</p>
-    <p>Email : arthur@kindo.com</p>
+<center>
+    <div>
+        <h1>Contact us</h1>
+    </div>
+    <div>
+        <p>CEO : Arthur kindo</p>
+        <p>Phone no : 69995005</p>
+        <p>Email : arthur@kindo.com</p>
+    </div>
     <hr>
-    <form action="">
-        <label for="">Your name</label>
-        <input type="text">
-        <br>
-        <label for="">Your Email</label>
-        <input type="email">
-        <br>
-        <label for="">Message Box</label>
-        <br>
-        <textarea name="Message box" id="" cols="50" rows="10"></textarea>
-        <br>
-        <input type="submit">
-    <form>
+    <div>
+        <form action="">
+            <label for="">Your name</label>
+            <input type="text">
+            <br>
+            <label for="">Your Email</label>
+            <input type="email">
+            <br>
+            <label for="">Message Box</label>
+            <br>
+            <textarea name="Message box" id="" cols="50" rows="10"></textarea>
+            <br>
+            <input type="submit">
+        <form>
+    </div>
+</center>
 </body>
 </html>
