hobies page modified

--- a/hobies.html
+++ b/hobies.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>
+<center>
+    <div>
         <h2>Hobies and Activities</h2>
-        <ol>
-            <li>Playing guter.</li>
-            <li>Making videos.</li>
-            <li>Gameing in pc.</li>
-        </ol>
-    </p>
+    </div>
+    <div>
+        <p>
+            <ol>
+                <li>Playing guter.</li>
+                <li>Making videos.</li>
+                <li>Gameing in pc.</li>
+            </ol>
+        </p>
+    </div>
+</center>
 </body>
 </html>
