index file modified with div element

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arthur's personal website</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.ico">
   </head>
         <!--Body start form here-->
   <body>
@@ -32,6 +33,7 @@
         </table>
   <center>
           <hr>
+          <div>
           <p>
               <h3>Books and Reading</h3>
               <ul>
@@ -43,6 +45,9 @@
               <!--Here i am creating a table-->
               <hr>
             </p>
+          </div>
+
+          <div>
               <table>
                 <thead>
                     <tr>
@@ -71,6 +76,8 @@
               </table>
               <hr>
           <p>
+        </div>
+        <div>
           <h3>Skills</h3>
           <table cellspacing="20">
             <tr>
@@ -110,8 +117,12 @@
           </table>
           <hr>
         </p>
+      </div>
+
+          <div id="footer-link">
             <a href="hobies.html">Hobies</a>
             <a href="Contact.html">Contact us</a>
+          </div>
   </center>
   </body>
 </html>
